Change colors to make everything white

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.MainActivity">
 
     <com.stfalcon.chatkit.messages.MessagesList
         android:id="@+id/messagesList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/input" />
+        android:layout_above="@+id/input"
+        app:incomingDefaultBubbleColor="@color/white"
+        app:incomingTextColor="@color/incoming_text_color"
+        app:incomingTextLinkColor="@color/incoming_link_color"
+        app:incomingTextSize="@dimen/chat_text_size_normal"
+        app:incomingTimeTextColor="@color/incoming_date_color"
+        app:incomingTimeTextSize="@dimen/chat_text_size_normal"
+        app:outcomingDefaultBubbleColor="@color/white_two"
+        app:outcomingTextColor="@color/outgoing_text_color"
+        app:outcomingTextLinkColor="@color/outgoing_link_color"
+        app:outcomingTextSize="@dimen/chat_text_size_normal"
+        app:outcomingTimeTextColor="@color/outgoing_date_color"
+        app:outcomingTimeTextSize="@dimen/chat_text_size_normal"
+        app:textAutoLink="all" />
 
     <com.stfalcon.chatkit.messages.MessageInput
         android:id="@+id/input"
-        app:inputHint="@string/hint_enter_a_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        app:inputHint="@string/hint_enter_a_message" />
 
 </RelativeLayout>
