--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="chat_background">#EEE</color>
+    <color name="input_background">#EEE</color>
+
+    <color name="outgoing_text_color">#303030</color>
+    <color name="outgoing_link_color">#3366BB</color>
+    <color name="outgoing_date_color">#AAA</color>
+
+    <color name="incoming_text_color">#303030</color>
+    <color name="incoming_link_color">#3366BB</color>
+    <color name="incoming_date_color">#AAA</color>
 </resources>
