Add attachments button to the left of send button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/input_background"
         android:elevation="8dp"
-        app:inputHint="@string/hint_enter_a_message" />
+        app:inputHint="@string/hint_enter_a_message"
+        app:showAttachmentButton="true" />
 
 </RelativeLayout>
