--- a/chatkit/src/main/res/layout/view_message_input.xml
+++ b/chatkit/src/main/res/layout/view_message_input.xml
@@ -3,29 +3,27 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageButton
-        android:id="@id/attachmentButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true" />
-
-    <Space
-        android:id="@id/attachmentButtonSpace"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_toEndOf="@id/attachmentButton"
-        android:layout_toRightOf="@id/attachmentButton" />
-
     <EditText
         android:id="@id/messageInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/sendButtonSpace"
-        android:layout_toLeftOf="@id/sendButtonSpace"
-        android:layout_toEndOf="@id/attachmentButtonSpace"
-        android:layout_toRightOf="@id/attachmentButtonSpace"
         android:inputType="textAutoCorrect|textAutoComplete|textMultiLine|textCapSentences" />
+
+    <Space
+        android:id="@id/attachmentButtonSpace"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_toStartOf="@id/attachmentButton"
+        android:layout_toLeftOf="@id/attachmentButton" />
+
+    <ImageButton
+        android:id="@id/attachmentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@id/sendButtonSpace"
+        android:layout_toLeftOf="@id/sendButtonSpace" />
 
     <Space
         android:id="@id/sendButtonSpace"
