--- a/app/src/main/res/layout/attachments_cardview.xml
+++ b/app/src/main/res/layout/attachments_cardview.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="296dp"
     android:orientation="vertical"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/blue"
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp">
 
