--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,9 +36,11 @@
     <com.contextgenesis.chatlauncher.ui.AttachmentsCardView
         android:id="@+id/attachments"
         android:layout_width="match_parent"
-        android:layout_height="296dp"
+        android:layout_height="wrap_content"
         android:layout_above="@id/input"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp">
 
     </com.contextgenesis.chatlauncher.ui.AttachmentsCardView>
 
