--- a/app/src/main/res/layout/attachments_cardview.xml
+++ b/app/src/main/res/layout/attachments_cardview.xml
@@ -2,10 +2,105 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="296dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:cardBackgroundColor="@color/blue"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="8dp">
+    app:cardBackgroundColor="@color/attachment_background"
+    app:cardCornerRadius="16dp">
+
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <TableRow android:layout_marginTop="24dp">
+
+            <com.contextgenesis.chatlauncher.ui.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:image_height="64dp"
+                app:image_src="@drawable/ic_circled_1"
+                app:image_width="64dp"
+                app:text_title="Option 1"
+                app:text_title_size="@dimen/chat_text_size_normal" />
+
+            <com.contextgenesis.chatlauncher.ui.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:image_height="64dp"
+                app:image_src="@drawable/ic_circled_2"
+                app:image_width="64dp"
+                app:text_title="Option 2"
+                app:text_title_size="@dimen/chat_text_size_normal" />
+
+            <com.contextgenesis.chatlauncher.ui.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:image_height="64dp"
+                app:image_src="@drawable/ic_circled_3"
+                app:image_width="64dp"
+                app:text_title="Option 3"
+                app:text_title_size="@dimen/chat_text_size_normal" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="24dp">
+
+            <com.contextgenesis.chatlauncher.ui.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:image_height="64dp"
+                app:image_src="@drawable/ic_circled_4"
+                app:image_width="64dp"
+                app:text_title="Option 4"
+                app:text_title_size="@dimen/chat_text_size_normal" />
+
+            <com.contextgenesis.chatlauncher.ui.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:image_height="64dp"
+                app:image_src="@drawable/ic_circled_5"
+                app:image_width="64dp"
+                app:text_title="Option 5"
+                app:text_title_size="@dimen/chat_text_size_normal" />
+
+            <com.contextgenesis.chatlauncher.ui.ImageTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                app:image_height="64dp"
+                app:image_src="@drawable/ic_circled_6"
+                app:image_width="64dp"
+                app:text_title="Option 6"
+                app:text_title_size="@dimen/chat_text_size_normal" />
+
+        </TableRow>
+    </TableLayout>
 
 </androidx.cardview.widget.CardView>
