--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
         android:layout_above="@id/input"
         android:background="@color/divider" />
 
-    <com.contextgenesis.chatlauncher.ui.AttachmentsCardView
-        android:id="@+id/attachments"
+    <com.contextgenesis.chatlauncher.ui.ShortcutsCardView
+        android:id="@+id/shortcuts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/input"
@@ -42,7 +42,7 @@
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp">
 
-    </com.contextgenesis.chatlauncher.ui.AttachmentsCardView>
+    </com.contextgenesis.chatlauncher.ui.ShortcutsCardView>
 
     <com.stfalcon.chatkit.messages.MessageInput
         android:id="@+id/input"
