Perform click on pressing done from the keyboard itself

--- a/chatkit/src/main/res/layout/view_message_input.xml
+++ b/chatkit/src/main/res/layout/view_message_input.xml
@@ -8,7 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:inputType="textAutoCorrect|textAutoComplete|textMultiLine|textCapSentences" />
+        android:layout_toLeftOf="@id/attachmentButtonSpace"
+        android:imeActionLabel="@string/send"
+        android:imeOptions="actionSend"
+        android:inputType="textAutoCorrect|textAutoComplete|textShortMessage|textCapSentences" />
 
     <Space
         android:id="@id/attachmentButtonSpace"
