--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -11,9 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/image_view"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/button_ripple"
         android:ellipsize="marquee"
         android:gravity="center"
         android:marqueeRepeatLimit="marquee_forever"
+        android:padding="4dp"
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:textAllCaps="false"
